updated for training model2

--- a/Models/InitialModelTest.ipynb
+++ b/Models/InitialModelTest.ipynb
@@ -947,15 +947,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\declan\\anaconda3\\envs\\pytorchCUDA\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "torch.Size([32, 3])\n",
-      "Loss: 1.3618842363357544\n"
+      "Loss: 1.3789663314819336\n"
      ]
     }
    ],
@@ -1033,10 +1041,10 @@
     "# Hyperparameters\n",
     "input_dim = 67 # Number of features in a single pitch\n",
     "num_heads = 4\n",
-    "num_encoder_layers = 3\n",
-    "hidden_dim = 32 # Increased hidden dimension for better representation\n",
+    "num_encoder_layers = 4\n",
+    "hidden_dim = 40 # Increased hidden dimension for better representation\n",
     "output_dim = 6  # Number of label dimensions\n",
-    "sequence_length = 60\n",
+    "sequence_length = 100\n",
     "dropout = 0.1\n",
     "batch_size = 32\n",
     "\n",
@@ -1059,6 +1067,26 @@
     "# Compute the loss\n",
     "loss = criterion(output, dummy_target_continuous, dummy_target_categorical)\n",
     "print(f'Loss: {loss.item()}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44606"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(p.numel() for p in model.parameters() if p.requires_grad)"
    ]
   },
   {
