fixed loss function, and made dataset more efficient

--- a/Models/InitialModelTest.ipynb
+++ b/Models/InitialModelTest.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "[70000 rows x 70 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +825,7 @@
        "[30000 rows x 70 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,20 +836,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\declan\\Documents\\BaseballModeling\\Models\\..\\Datasets\\BaseballDataset.py:65: SettingWithCopyWarning: \n",
+      "c:\\Users\\declan\\Documents\\BaseballModeling\\Models\\..\\Datasets\\BaseballDataset.py:68: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[mask_column] = 0\n",
-      "c:\\Users\\declan\\Documents\\BaseballModeling\\Models\\..\\Datasets\\BaseballDataset.py:65: SettingWithCopyWarning: \n",
+      "c:\\Users\\declan\\Documents\\BaseballModeling\\Models\\..\\Datasets\\BaseballDataset.py:68: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
        "torch.Size([20, 65])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,72 +907,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([20])"
+       "torch.Size([4])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_dataset[0][2].shape"
+    "train_dataset[0][1].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([20, 65])"
+       "[tensor([1., 0., 0., 0., 0., 0., 0., 0., 0., 0.]),\n",
+       " tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "valid_dataset[0][0].shape"
+    "valid_dataset[0][2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\declan\\anaconda3\\envs\\pytorchCUDA\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([32, 3])\n",
-      "Loss: 1.3789663314819336\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import math\n",
     "import torch.nn.functional as F\n",
+    "\n",
     "\n",
     "class PositionalEncoding(nn.Module):\n",
     "    def __init__(self, d_model: int, dropout: float = 0.1, max_len: int = 5000):\n",
@@ -1030,43 +1015,50 @@
     "        # Continuous target loss (MSE)\n",
     "        mse_loss = F.mse_loss(output[:, :target_continuous.size(1)], target_continuous)\n",
     "        \n",
-    "        # Categorical target loss (Cross-Entropy)\n",
-    "        print(target_categorical.shape)\n",
-    "        cross_entropy_loss = F.cross_entropy(output[:, target_continuous.size(1):], target_categorical.type(torch.float))\n",
+    "        # Categorical target loss (Cross-Entropy) for each categorical feature\n",
+    "        cross_entropy_loss = 0\n",
+    "        start_idx = target_continuous.size(1)\n",
+    "        for cat_target in target_categorical:\n",
+    "            end_idx = start_idx + cat_target.size(1)\n",
+    "            cross_entropy_loss += F.cross_entropy(output[:, start_idx:end_idx], cat_target.argmax(dim=1))\n",
+    "            start_idx = end_idx\n",
     "        \n",
+    "        # # Sum of all categorical losses\n",
+    "        # cross_entropy_loss = torch.sum(categorical_losses)\n",
+    "\n",
     "        # Weighted sum of the losses\n",
     "        loss = (self.weight_param * mse_loss) + ((1 - self.weight_param) * cross_entropy_loss)\n",
     "        return loss\n",
     "\n",
-    "# Hyperparameters\n",
-    "input_dim = 67 # Number of features in a single pitch\n",
-    "num_heads = 4\n",
-    "num_encoder_layers = 4\n",
-    "hidden_dim = 40 # Increased hidden dimension for better representation\n",
-    "output_dim = 6  # Number of label dimensions\n",
-    "sequence_length = 100\n",
-    "dropout = 0.1\n",
-    "batch_size = 32\n",
+    "# # Hyperparameters\n",
+    "# input_dim = 65 # Number of features in a single pitch\n",
+    "# num_heads = 4\n",
+    "# num_encoder_layers = 4\n",
+    "# hidden_dim = 40 # Increased hidden dimension for better representation\n",
+    "# output_dim = 6  # Number of label dimensions\n",
+    "# sequence_length = 20\n",
+    "# dropout = 0.1\n",
+    "# batch_size = 32\n",
     "\n",
-    "# Initialize the model, loss function, and optimizer\n",
-    "model = TransformerModel(input_dim, num_heads, num_encoder_layers, hidden_dim, output_dim, sequence_length, dropout)\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "# # Initialize the model, loss function, and optimizer\n",
+    "# model = TransformerModel(input_dim, num_heads, num_encoder_layers, hidden_dim, output_dim, sequence_length, dropout)\n",
+    "# optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
-    "# Dummy data for testing\n",
-    "dummy_input = torch.randn(batch_size, sequence_length, input_dim)\n",
-    "dummy_target_continuous = torch.randn(batch_size, 3)  # Assuming 3 continuous targets\n",
-    "dummy_target_categorical = torch.randint(0, 2, (batch_size, 3))  # Assuming 3 categorical targets\n",
+    "# # Dummy data for testing\n",
+    "# dummy_input = torch.randn(batch_size, sequence_length, input_dim)\n",
+    "# dummy_target_continuous = torch.randn(batch_size, 3)  # Assuming 3 continuous targets\n",
+    "# dummy_target_categorical = torch.randint(0, 2, (batch_size, 3))  # Assuming 3 categorical targets\n",
     "\n",
-    "# Forward pass\n",
-    "output = model(dummy_input)\n",
+    "# # Forward pass\n",
+    "# output = model(dummy_input)\n",
     "\n",
-    "# Define the custom loss function\n",
-    "weight_param = 0.5  # Adjust this weight parameter as needed\n",
-    "criterion = CustomLoss(weight_param)\n",
+    "# # Define the custom loss function\n",
+    "# weight_param = 0.5  # Adjust this weight parameter as needed\n",
+    "# criterion = CustomLoss(weight_param)\n",
     "\n",
-    "# Compute the loss\n",
-    "loss = criterion(output, dummy_target_continuous, dummy_target_categorical)\n",
-    "print(f'Loss: {loss.item()}')\n"
+    "# # Compute the loss\n",
+    "# loss = criterion(output, dummy_target_continuous, dummy_target_categorical)\n",
+    "# print(f'Loss: {loss.item()}')\n"
    ]
   },
   {
@@ -1091,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1112,26 +1104,8 @@
      "output_type": "stream",
      "text": [
       "cuda\n",
-      "Epoch 1/20, Train Loss: 0.6316, Val Loss: 0.4763\n",
-      "Epoch 2/20, Train Loss: 0.5047, Val Loss: 0.4801\n",
-      "Epoch 3/20, Train Loss: 0.4958, Val Loss: 0.4678\n",
-      "Epoch 4/20, Train Loss: 0.4880, Val Loss: 0.4644\n",
-      "Epoch 5/20, Train Loss: 0.4843, Val Loss: 0.4498\n",
-      "Epoch 6/20, Train Loss: 0.4751, Val Loss: 0.4492\n",
-      "Epoch 7/20, Train Loss: 0.4705, Val Loss: 0.4448\n",
-      "Epoch 8/20, Train Loss: 0.4724, Val Loss: 0.4422\n",
-      "Epoch 9/20, Train Loss: 0.4657, Val Loss: 0.4409\n",
-      "Epoch 10/20, Train Loss: 0.4641, Val Loss: 0.4381\n",
-      "Epoch 11/20, Train Loss: 0.4646, Val Loss: 0.4407\n",
-      "Epoch 12/20, Train Loss: 0.4620, Val Loss: 0.4455\n",
-      "Epoch 13/20, Train Loss: 0.4629, Val Loss: 0.4375\n",
-      "Epoch 14/20, Train Loss: 0.4610, Val Loss: 0.4332\n",
-      "Epoch 15/20, Train Loss: 0.4592, Val Loss: 0.4306\n",
-      "Epoch 16/20, Train Loss: 0.4572, Val Loss: 0.4388\n",
-      "Epoch 17/20, Train Loss: 0.4606, Val Loss: 0.4339\n",
-      "Epoch 18/20, Train Loss: 0.4564, Val Loss: 0.4418\n",
-      "Epoch 19/20, Train Loss: 0.4586, Val Loss: 0.4335\n",
-      "Epoch 20/20, Train Loss: 0.4537, Val Loss: 0.4311\n"
+      "Epoch 1/2, Train Loss: 0.7876, Val Loss: 0.6165\n",
+      "Epoch 2/2, Train Loss: 0.6511, Val Loss: 0.6019\n"
      ]
     }
    ],
@@ -1139,7 +1113,7 @@
     "\n",
     "input_dim = 65  # Number of features in a single pitch\n",
     "num_heads = 4\n",
-    "num_encoder_layers = 3\n",
+    "num_encoder_layers = 4\n",
     "hidden_dim = 32\n",
     "output_dim = 24 # Number of label dimensions\n",
     "sequence_length = 20\n",
@@ -1159,7 +1133,8 @@
     "    model.train()\n",
     "    running_loss = 0.0\n",
     "    for sequences, cont_targets, cat_targets in train_loader:\n",
-    "        sequences, cont_targets, cat_targets = sequences.to(device), cont_targets.to(device), cat_targets.to(device)\n",
+    "        sequences, cont_targets = sequences.to(device), cont_targets.to(device)\n",
+    "        cat_targets = [t.to(device) for t in cat_targets]\n",
     "        \n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(sequences)\n",
@@ -1177,7 +1152,8 @@
     "    running_loss = 0.0\n",
     "    with torch.no_grad():\n",
     "        for sequences, cont_targets, cat_targets in val_loader:\n",
-    "            sequences, cont_targets, cat_targets = sequences.to(device), cont_targets.to(device), cat_targets.to(device)\n",
+    "            sequences, cont_targets = sequences.to(device), cont_targets.to(device)\n",
+    "            cat_targets = [t.to(device) for t in cat_targets]\n",
     "            \n",
     "            outputs = model(sequences)\n",
     "            loss = criterion(outputs, cont_targets, cat_targets)\n",
@@ -1187,7 +1163,7 @@
     "    epoch_loss = running_loss / len(val_loader)\n",
     "    return epoch_loss\n",
     "\n",
-    "num_epochs = 20\n",
+    "num_epochs = 2\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    train_loss = train(model, train_loader, criterion, optimizer, device)\n",
