fixed dataset code

--- a/data/clean_data.ipynb
+++ b/data/clean_data.ipynb
@@ -19,13 +19,43 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\declan\\AppData\\Local\\Temp\\ipykernel_5980\\4270108768.py:1: DtypeWarning: Columns (43) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\declan\\AppData\\Local\\Temp\\ipykernel_27992\\4270108768.py:1: DtypeWarning: Columns (34) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  full_data = pd.read_csv('statcast_2015-2024.csv')\n"
      ]
     }
    ],
    "source": [
     "full_data = pd.read_csv('statcast_2015-2024.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hit_location\n",
+       "2.0    399904\n",
+       "8.0    202907\n",
+       "9.0    182175\n",
+       "7.0    179627\n",
+       "6.0    151593\n",
+       "4.0    136818\n",
+       "5.0    125016\n",
+       "3.0     84207\n",
+       "1.0     48360\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_data['hit_location'].value_counts()"
    ]
   },
   {
