--- a/Models/inference_test.ipynb
+++ b/Models/inference_test.ipynb
@@ -39,6 +39,45 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['launch_speed', 'game_date', 'release_speed', 'release_pos_x',\n",
+       "       'release_pos_z', 'batter', 'pitcher', 'pfx_x', 'pfx_z', 'plate_x',\n",
+       "       'plate_z', 'hc_x', 'hc_y', 'vy0', 'vz0', 'ax', 'ay', 'az', 'sz_top',\n",
+       "       'sz_bot', 'launch_angle', 'release_spin_rate', 'release_extension',\n",
+       "       'game_pk', 'release_pos_y', 'at_bat_number', 'batter_name',\n",
+       "       'pitcher_name', 'events_B', 'events_S', 'events_double',\n",
+       "       'events_field_out', 'events_hit_by_pitch', 'events_home_run',\n",
+       "       'events_single', 'events_strikeout', 'events_triple', 'events_walk',\n",
+       "       'pitch_type_CH', 'pitch_type_CS', 'pitch_type_CU', 'pitch_type_EP',\n",
+       "       'pitch_type_FA', 'pitch_type_FC', 'pitch_type_FF', 'pitch_type_FO',\n",
+       "       'pitch_type_FS', 'pitch_type_KC', 'pitch_type_KN', 'pitch_type_PO',\n",
+       "       'pitch_type_SC', 'pitch_type_SI', 'pitch_type_SL', 'pitch_type_ST',\n",
+       "       'pitch_type_SV', 'stand_L', 'stand_R', 'p_throws_L', 'p_throws_R',\n",
+       "       'hit_location_0.0', 'hit_location_1.0', 'hit_location_2.0',\n",
+       "       'hit_location_3.0', 'hit_location_4.0', 'hit_location_5.0',\n",
+       "       'hit_location_6.0', 'hit_location_7.0', 'hit_location_8.0',\n",
+       "       'hit_location_9.0', 'balls_0', 'balls_1', 'balls_2', 'balls_3',\n",
+       "       'balls_4', 'strikes_0', 'strikes_1', 'strikes_2', 'outs_when_up_0',\n",
+       "       'outs_when_up_1', 'outs_when_up_2'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -47,73 +86,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'events', 'hc_x', 'hc_y', 'hit_location', 'launch_angle', 'launch_speed'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_dataset.label_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq, cont_target, cat_targets = valid_dataset[1]"
+    "seq, cont_target, cat_targets = valid_dataset[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "67"
+       "tensor([-3.7555e-17,  7.2403e-01, -1.6664e-01,  3.9323e-01, -8.3054e-01,\n",
+       "        -5.8089e-02,  1.1461e+00,  3.0425e-01, -3.3902e-16,  1.9012e-16,\n",
+       "        -7.1635e-01, -1.5105e-01, -9.2301e-01,  9.6360e-01, -5.2170e-02,\n",
+       "         1.9702e+00,  2.7812e+00, -2.3654e-17, -1.5236e+00, -9.9139e-02,\n",
+       "         5.6065e-02,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  1.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  1.0000e+00,\n",
+       "         0.0000e+00,  1.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  1.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  1.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  1.0000e+00,  1.0000e+00,  1.0000e+00])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(seq[0])"
+    "seq[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 1.8603,  0.5420, -0.1123,  0.3190, -1.1204, -0.0863, -1.1683, -0.0164,\n",
-       "         1.7948,  0.8905, -0.5571, -0.3158, -1.1021,  0.6189, -0.0939,  0.4751,\n",
-       "         1.7086,  1.2930, -1.6790,  0.5440, -0.5023,  0.0000,  0.0000,  0.0000,\n",
-       "         0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "         0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "         0.0000,  0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  1.0000,  1.0000,\n",
-       "         0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  1.0000,\n",
-       "         0.0000,  1.0000,  0.0000,  0.0000,  0.0000,  1.0000,  0.0000,  0.0000,\n",
-       "         1.0000,  0.0000,  0.0000])"
+       "tensor([-0.6591, -0.4316, -0.4295, -0.6863])"
       ]
      },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "seq[-2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([1.8603, 1.7948, 1.2930, 0.8905])"
-      ]
-     },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,16 +169,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 0,  8, 17,  9])"
+       "[tensor([1., 0., 0., 0., 0., 0., 0., 0., 0., 0.]),\n",
+       " tensor([1., 0., 0., 0., 0., 0., 0., 0., 0., 0.])]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([17,  8,  9,  0])"
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,29 +210,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 1.2006e-17,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
-       "         0.0000e+00,  0.0000e+00,  0.0000e+00, -2.0383e-16,  3.5617e-16,\n",
-       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
-       "         0.0000e+00,  0.0000e+00, -1.3158e-17,  0.0000e+00,  0.0000e+00,\n",
-       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
-       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
-       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
-       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
-       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
-       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
-       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
-       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
-       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
-       "         1.0000e+00,  1.0000e+00])"
+       "[tensor([21, 22, 23, 24, 25, 26, 27, 28, 29, 30]),\n",
+       " tensor([52, 53, 54, 55, 56, 57, 58, 59, 60, 61])]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_dataset.categorical_label_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([73, 74])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_dataset.mask_indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-3.7555e-17,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00, -3.3902e-16,  1.9012e-16,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00, -2.3654e-17,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,  0.0000e+00,\n",
+       "         0.0000e+00,  0.0000e+00,  0.0000e+00,  1.0000e+00,  1.0000e+00])"
+      ]
+     },
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
