custom examples, fixed scalers

--- a/Models/Notebooks/compare_players.ipynb
+++ b/Models/Notebooks/compare_players.ipynb
@@ -810,7 +810,7 @@
     "        #print(name,len(player_dataset))\n",
     "\n",
     "        # Get preds and true using this dataset\n",
-    "        player_preds, player_true = transformer_model.make_preds(player_dataset, scaler_path, device, 2000, scale=True)\n",
+    "        player_preds, player_true = transformer_model.make_preds(player_dataset, scaler_path, device, 2000, scale=False)\n",
     "\n",
     "        #print(player_preds.columns)\n",
     "\n",
