--- a/data/clean_data.ipynb
+++ b/data/clean_data.ipynb
@@ -29,7 +29,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\declan\\AppData\\Local\\Temp\\ipykernel_23292\\662348298.py:1: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\declan\\AppData\\Local\\Temp\\ipykernel_53112\\662348298.py:1: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  t = pd.read_csv(\"statcast_2015-2024.csv\")\n"
      ]
     }
@@ -47,13 +47,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected Columns: ['events', 'zone', 'launch_speed', 'pitch_type', 'game_date', 'release_speed', 'release_pos_x', 'release_pos_z', 'batter', 'pitcher', 'stand', 'p_throws', 'hit_location', 'balls', 'strikes', 'pfx_x', 'pfx_z', 'plate_x', 'plate_z', 'outs_when_up', 'hc_x', 'hc_y', 'vy0', 'vz0', 'ax', 'ay', 'az', 'sz_top', 'sz_bot', 'launch_angle', 'release_spin_rate', 'release_extension', 'game_pk', 'release_pos_y', 'at_bat_number', 'batter_name', 'pitcher_name']\n",
+      "Selected Columns: ['events', 'pitch_number', 'zone', 'launch_speed', 'pitch_type', 'game_date', 'release_speed', 'release_pos_x', 'release_pos_z', 'batter', 'pitcher', 'stand', 'p_throws', 'hit_location', 'balls', 'strikes', 'pfx_x', 'pfx_z', 'plate_x', 'plate_z', 'outs_when_up', 'hc_x', 'hc_y', 'vy0', 'vz0', 'ax', 'ay', 'az', 'sz_top', 'sz_bot', 'launch_angle', 'release_spin_rate', 'release_extension', 'game_pk', 'release_pos_y', 'at_bat_number', 'batter_name', 'pitcher_name']\n",
       "Raw Data Shape: (6653226, 88)\n"
      ]
     }
    ],
    "source": [
-    "t_proc = DataProcessor(t,\"configv2.json\")"
+    "t_proc = DataProcessor(t,\"configv3.json\")"
    ]
   },
   {
@@ -67,6 +67,8 @@
      "text": [
       "Handled 0 missing values in column 'events'\n",
       "Missing values after handling in column 'events': 0\n",
+      "Handled 0 missing values in column 'pitch_number'\n",
+      "Missing values after handling in column 'pitch_number': 0\n",
       "Handled 96708 missing values in column 'zone'\n",
       "Missing values after handling in column 'zone': 0\n",
       "Handled 4645908 missing values in column 'launch_speed'\n",
@@ -142,13 +144,10 @@
       "Dropped 7454 rows for column 'events' due to drop values\n",
       "Dropped 6355 rows for column 'pitch_type' due to drop values\n",
       "Dropped 1 rows for column 'strikes' due to drop values\n",
-      "Processed Data Shape after convert_data_types: (6542490, 37)\n",
-      "launch_speed    83.234575\n",
-      "dtype: float64\n",
-      "[83.23457481] [8.02141961]\n",
-      "Processed Data Shape after standardize_or_normalize: (6542490, 37)\n",
-      "Processed Data Shape after one_hot_encode: (6542490, 93)\n",
-      "New Data Shape: (6542490, 93)\n"
+      "Processed Data Shape after convert_data_types: (6542490, 38)\n",
+      "Processed Data Shape after standardize_or_normalize: (6542490, 38)\n",
+      "Processed Data Shape after one_hot_encode: (6542490, 94)\n",
+      "New Data Shape: (6542490, 94)\n"
      ]
     },
     {
@@ -172,6 +171,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>pitch_number</th>\n",
        "      <th>launch_speed</th>\n",
        "      <th>game_date</th>\n",
        "      <th>release_speed</th>\n",
@@ -181,7 +181,6 @@
        "      <th>pitcher</th>\n",
        "      <th>pfx_x</th>\n",
        "      <th>pfx_z</th>\n",
-       "      <th>plate_x</th>\n",
        "      <th>...</th>\n",
        "      <th>balls_1</th>\n",
        "      <th>balls_2</th>\n",
@@ -198,6 +197,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>6</td>\n",
        "      <td>-0.002705</td>\n",
        "      <td>2024-06-30</td>\n",
        "      <td>-1.062970</td>\n",
@@ -207,7 +207,6 @@
        "      <td>623149</td>\n",
        "      <td>1.591075</td>\n",
        "      <td>-0.006400</td>\n",
-       "      <td>-0.347309</td>\n",
        "      <td>...</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -222,6 +221,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>5</td>\n",
        "      <td>0.581621</td>\n",
        "      <td>2024-06-30</td>\n",
        "      <td>-1.096181</td>\n",
@@ -231,7 +231,6 @@
        "      <td>623149</td>\n",
        "      <td>1.568450</td>\n",
        "      <td>-0.073376</td>\n",
-       "      <td>0.879447</td>\n",
        "      <td>...</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -246,6 +245,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>4</td>\n",
        "      <td>-2.136103</td>\n",
        "      <td>2024-06-30</td>\n",
        "      <td>0.331898</td>\n",
@@ -255,7 +255,6 @@
        "      <td>623149</td>\n",
        "      <td>-0.773200</td>\n",
        "      <td>0.810711</td>\n",
-       "      <td>0.108343</td>\n",
        "      <td>...</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -270,6 +269,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>-0.002705</td>\n",
        "      <td>2024-06-30</td>\n",
        "      <td>-0.896914</td>\n",
@@ -279,7 +279,6 @@
        "      <td>623149</td>\n",
        "      <td>1.783385</td>\n",
        "      <td>0.207924</td>\n",
-       "      <td>2.596906</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -294,6 +293,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>2</td>\n",
        "      <td>0.693820</td>\n",
        "      <td>2024-06-30</td>\n",
        "      <td>0.182447</td>\n",
@@ -303,7 +303,6 @@
        "      <td>623149</td>\n",
        "      <td>-0.626140</td>\n",
        "      <td>0.382063</td>\n",
-       "      <td>0.715880</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -342,6 +341,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6653221</th>\n",
+       "      <td>5</td>\n",
        "      <td>-0.002705</td>\n",
        "      <td>2015-04-05</td>\n",
        "      <td>-2.142332</td>\n",
@@ -351,7 +351,6 @@
        "      <td>452657</td>\n",
        "      <td>-1.485876</td>\n",
        "      <td>-1.158392</td>\n",
-       "      <td>-2.158235</td>\n",
        "      <td>...</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -366,6 +365,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6653222</th>\n",
+       "      <td>4</td>\n",
        "      <td>-0.002705</td>\n",
        "      <td>2015-04-05</td>\n",
        "      <td>0.464742</td>\n",
@@ -375,7 +375,6 @@
        "      <td>452657</td>\n",
        "      <td>0.177035</td>\n",
        "      <td>0.301691</td>\n",
-       "      <td>-0.779595</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -390,6 +389,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6653223</th>\n",
+       "      <td>3</td>\n",
        "      <td>-0.002705</td>\n",
        "      <td>2015-04-05</td>\n",
        "      <td>0.996120</td>\n",
@@ -399,7 +399,6 @@
        "      <td>452657</td>\n",
        "      <td>1.229081</td>\n",
        "      <td>1.266150</td>\n",
-       "      <td>-0.639394</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -414,6 +413,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6653224</th>\n",
+       "      <td>2</td>\n",
        "      <td>-0.002705</td>\n",
        "      <td>2015-04-05</td>\n",
        "      <td>0.763642</td>\n",
@@ -423,7 +423,6 @@
        "      <td>452657</td>\n",
        "      <td>1.070708</td>\n",
        "      <td>1.426893</td>\n",
-       "      <td>-0.253842</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -438,6 +437,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6653225</th>\n",
+       "      <td>1</td>\n",
        "      <td>-0.002705</td>\n",
        "      <td>2015-04-05</td>\n",
        "      <td>0.796853</td>\n",
@@ -447,7 +447,6 @@
        "      <td>452657</td>\n",
        "      <td>0.708714</td>\n",
        "      <td>1.266150</td>\n",
-       "      <td>0.458845</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -462,63 +461,63 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6542490 rows × 93 columns</p>\n",
+       "<p>6542490 rows × 94 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         launch_speed  game_date  release_speed  release_pos_x  release_pos_z  \\\n",
-       "0           -0.002705 2024-06-30      -1.062970      -1.498509      -2.803610   \n",
-       "1            0.581621 2024-06-30      -1.096181      -1.535435      -2.938090   \n",
-       "2           -2.136103 2024-06-30       0.331898      -1.456308      -2.573073   \n",
-       "3           -0.002705 2024-06-30      -0.896914      -1.503784      -2.842033   \n",
-       "4            0.693820 2024-06-30       0.182447      -1.445758      -2.745976   \n",
-       "...               ...        ...            ...            ...            ...   \n",
-       "6653221     -0.002705 2015-04-05      -2.142332       1.698224      -0.690351   \n",
-       "6653222     -0.002705 2015-04-05       0.464742       1.761525      -0.882466   \n",
-       "6653223     -0.002705 2015-04-05       0.996120       1.708774      -0.882466   \n",
-       "6653224     -0.002705 2015-04-05       0.763642       1.682398      -0.728774   \n",
-       "6653225     -0.002705 2015-04-05       0.796853       1.735150      -0.863254   \n",
+       "         pitch_number  launch_speed  game_date  release_speed  release_pos_x  \\\n",
+       "0                   6     -0.002705 2024-06-30      -1.062970      -1.498509   \n",
+       "1                   5      0.581621 2024-06-30      -1.096181      -1.535435   \n",
+       "2                   4     -2.136103 2024-06-30       0.331898      -1.456308   \n",
+       "3                   3     -0.002705 2024-06-30      -0.896914      -1.503784   \n",
+       "4                   2      0.693820 2024-06-30       0.182447      -1.445758   \n",
+       "...               ...           ...        ...            ...            ...   \n",
+       "6653221             5     -0.002705 2015-04-05      -2.142332       1.698224   \n",
+       "6653222             4     -0.002705 2015-04-05       0.464742       1.761525   \n",
+       "6653223             3     -0.002705 2015-04-05       0.996120       1.708774   \n",
+       "6653224             2     -0.002705 2015-04-05       0.763642       1.682398   \n",
+       "6653225             1     -0.002705 2015-04-05       0.796853       1.735150   \n",
        "\n",
-       "         batter  pitcher     pfx_x     pfx_z   plate_x  ...  balls_1  balls_2  \\\n",
-       "0        680869   623149  1.591075 -0.006400 -0.347309  ...     True    False   \n",
-       "1        680869   623149  1.568450 -0.073376  0.879447  ...     True    False   \n",
-       "2        680869   623149 -0.773200  0.810711  0.108343  ...     True    False   \n",
-       "3        680869   623149  1.783385  0.207924  2.596906  ...    False    False   \n",
-       "4        680869   623149 -0.626140  0.382063  0.715880  ...    False    False   \n",
-       "...         ...      ...       ...       ...       ...  ...      ...      ...   \n",
-       "6653221  572761   452657 -1.485876 -1.158392 -2.158235  ...     True    False   \n",
-       "6653222  572761   452657  0.177035  0.301691 -0.779595  ...    False    False   \n",
-       "6653223  572761   452657  1.229081  1.266150 -0.639394  ...    False    False   \n",
-       "6653224  572761   452657  1.070708  1.426893 -0.253842  ...    False    False   \n",
-       "6653225  572761   452657  0.708714  1.266150  0.458845  ...    False    False   \n",
+       "         release_pos_z  batter  pitcher     pfx_x     pfx_z  ...  balls_1  \\\n",
+       "0            -2.803610  680869   623149  1.591075 -0.006400  ...     True   \n",
+       "1            -2.938090  680869   623149  1.568450 -0.073376  ...     True   \n",
+       "2            -2.573073  680869   623149 -0.773200  0.810711  ...     True   \n",
+       "3            -2.842033  680869   623149  1.783385  0.207924  ...    False   \n",
+       "4            -2.745976  680869   623149 -0.626140  0.382063  ...    False   \n",
+       "...                ...     ...      ...       ...       ...  ...      ...   \n",
+       "6653221      -0.690351  572761   452657 -1.485876 -1.158392  ...     True   \n",
+       "6653222      -0.882466  572761   452657  0.177035  0.301691  ...    False   \n",
+       "6653223      -0.882466  572761   452657  1.229081  1.266150  ...    False   \n",
+       "6653224      -0.728774  572761   452657  1.070708  1.426893  ...    False   \n",
+       "6653225      -0.863254  572761   452657  0.708714  1.266150  ...    False   \n",
        "\n",
-       "         balls_3  balls_4  strikes_0  strikes_1  strikes_2  outs_when_up_0  \\\n",
-       "0          False    False      False      False       True           False   \n",
-       "1          False    False      False      False       True           False   \n",
-       "2          False    False      False      False       True           False   \n",
-       "3          False    False      False      False       True           False   \n",
-       "4          False    False      False       True      False           False   \n",
-       "...          ...      ...        ...        ...        ...             ...   \n",
-       "6653221    False    False      False      False       True            True   \n",
-       "6653222    False    False      False      False       True            True   \n",
-       "6653223    False    False      False      False       True            True   \n",
-       "6653224    False    False      False       True      False            True   \n",
-       "6653225    False    False       True      False      False            True   \n",
+       "         balls_2  balls_3  balls_4  strikes_0  strikes_1  strikes_2  \\\n",
+       "0          False    False    False      False      False       True   \n",
+       "1          False    False    False      False      False       True   \n",
+       "2          False    False    False      False      False       True   \n",
+       "3          False    False    False      False      False       True   \n",
+       "4          False    False    False      False       True      False   \n",
+       "...          ...      ...      ...        ...        ...        ...   \n",
+       "6653221    False    False    False      False      False       True   \n",
+       "6653222    False    False    False      False      False       True   \n",
+       "6653223    False    False    False      False      False       True   \n",
+       "6653224    False    False    False      False       True      False   \n",
+       "6653225    False    False    False       True      False      False   \n",
        "\n",
-       "         outs_when_up_1  outs_when_up_2  \n",
-       "0                 False            True  \n",
-       "1                 False            True  \n",
-       "2                 False            True  \n",
-       "3                 False            True  \n",
-       "4                 False            True  \n",
-       "...                 ...             ...  \n",
-       "6653221           False           False  \n",
-       "6653222           False           False  \n",
-       "6653223           False           False  \n",
-       "6653224           False           False  \n",
-       "6653225           False           False  \n",
+       "         outs_when_up_0  outs_when_up_1  outs_when_up_2  \n",
+       "0                 False           False            True  \n",
+       "1                 False           False            True  \n",
+       "2                 False           False            True  \n",
+       "3                 False           False            True  \n",
+       "4                 False           False            True  \n",
+       "...                 ...             ...             ...  \n",
+       "6653221            True           False           False  \n",
+       "6653222            True           False           False  \n",
+       "6653223            True           False           False  \n",
+       "6653224            True           False           False  \n",
+       "6653225            True           False           False  \n",
        "\n",
-       "[6542490 rows x 93 columns]"
+       "[6542490 rows x 94 columns]"
       ]
      },
      "execution_count": 4,
@@ -532,42 +531,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_proc.processed_data.to_csv('full_cleaned_94', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'launch_speed': StandardScaler(),\n",
-       " 'release_speed': StandardScaler(),\n",
-       " 'release_pos_x': StandardScaler(),\n",
-       " 'release_pos_z': StandardScaler(),\n",
-       " 'pfx_x': StandardScaler(),\n",
-       " 'pfx_z': StandardScaler(),\n",
-       " 'plate_x': StandardScaler(),\n",
-       " 'plate_z': StandardScaler(),\n",
-       " 'hc_x': StandardScaler(),\n",
-       " 'hc_y': StandardScaler(),\n",
-       " 'vy0': StandardScaler(),\n",
-       " 'vz0': StandardScaler(),\n",
-       " 'ax': StandardScaler(),\n",
-       " 'ay': StandardScaler(),\n",
-       " 'az': StandardScaler(),\n",
-       " 'sz_top': StandardScaler(),\n",
-       " 'sz_bot': StandardScaler(),\n",
-       " 'launch_angle': StandardScaler(),\n",
-       " 'release_spin_rate': StandardScaler(),\n",
-       " 'release_extension': StandardScaler(),\n",
-       " 'release_pos_y': StandardScaler()}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scalers saved to full_scalers_94.pkl\n"
+     ]
     }
    ],
    "source": [
-    "t_proc.scalers"
+    "t_proc.save_scalers(\"full_scalers_94.pkl\")"
    ]
   },
   {
